@@ -73,7 +73,7 @@ $(ZMK.releaseArchive).Files += $(addprefix examples/libhello-cpp/,Makefile Test.
 $(ZMK.releaseArchive).Files += $(addprefix examples/libhello-objc/,Makefile Test.mk hello.m hello.h)
 $(ZMK.releaseArchive).Files += $(addprefix examples/script/,Makefile Test.mk hello.sh)
 $(ZMK.releaseArchive).Files += $(addprefix examples/true_false/,Makefile Test.mk true_false.c README.txt)
-$(ZMK.releaseArchive).Files += $(addprefix tests/Configure/,Makefile Test.mk)
+$(ZMK.releaseArchive).Files += $(addprefix tests/Configure/,Makefile Test.mk integration/Makefile integration/Test.mk)
 $(ZMK.releaseArchive).Files += $(addprefix tests/Directories/,Makefile Test.mk)
 $(ZMK.releaseArchive).Files += $(addprefix tests/Directory/,Makefile Test.mk)
 $(ZMK.releaseArchive).Files += $(addprefix tests/Header/,Makefile Test.mk foo.h include/bar.h froz.h)
