@@ -1,0 +1,6 @@
+include z.mk
+
+Project.Name=foo
+Project.Version=1
+
+$(eval $(call ZMK.Import,Configure))
