@@ -39,6 +39,16 @@ Configure.Options ?=
 # location. One place where this happens is zmk test suite.
 ifneq (,$(Project.Name))
 -include config.$(Project.Name).mk
+# Those are copied from z.mk and need to be in sync.
+ifneq ($(ZMK.SrcDir),.)
+ZMK.IsOutOfTreeBuild = yes
+ZMK.OutOfTreeSourcePath = $(ZMK.SrcDir)/
+VPATH = $(ZMK.SrcDir)
+else
+ZMK.IsOutOfTreeBuild =
+ZMK.OutOfTreeSourcePath =
+endif
+$(if $(Configure.debug),$(foreach v,ZMK.SrcDir ZMK.IsOutOfTreeBuild ZMK.OutOfTreeSourcePath,$(info DEBUG: $v=$($v))))
 endif
 
 # Enable silent rules if configured.
